=======================

Version 0.30, released UNRELEASED
---------------------------------

* Strip ASCII control characters from displayed output (but expand
  TABs) in widget values. This avoids TABs making values longer than
  expected, and terminals getting confused by control sequences.

* New method `ttystatus.TerminalStatus.get_terminal_size` returns
  terminal width and height.

Version 0.29, released 2015-10-10
---------------------------------

* Do not write a newline to terminal when `finish()` is called, if
  there is not output to the terminal otherwise. The point of the
  newline is to make sure the shell prompt starts at the beginning of
  a new line.

Version 0.28, released 2015-10-10
---------------------------------

* Fix another case where terminal capabilities are queried and the
  terminal isn't capable.

Version 0.27, released 2015-10-10
---------------------------------

* Improve speed when progress output is disabled, by avoiding
  pointless rendering.

Version 0.26, released 2015-10-06
---------------------------------

* Fix looking up of capabilities when there is not terminal. Reported
  by Sharon Kimble.

Version 0.25, released 2015-10-05
---------------------------------

* Fix handling of a terminal without the necessary capabilities, by
  disabling output.

Version 0.24.1, released 2015-10-01
---------------------------------

* Fix handling the case of the process not having a terminal to talk
  to. Reported by Juergen Nickelsen.

Version 0.24, released 2015-09-30
---------------------------------

* Output can now be on multiple lines. Add newlines to format string.

Version 0.23, released 2013-06-19
---------------------------------

* No longer use the SIGWINCH handler, since that causes problems when
  applications do certain kinds of I/O and the signal interrupts it.
  Libraries shouldn't install signal handlers like this. Instead,
  query the terminal width whenever making updates.

Version 0.22, released 2013-03-12